--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         width: 100%;
     }
 </style>
-<body>
+<body translate="no"> 
     <div>
             <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSewyXx-GV34MGdf17YkZ0bOKX8HGC_xzjoIF3uKix13tTuE3w/viewform?embedded=true" width="640" height="3690" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 
